--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "",
   "dependencies": {
+    "commonmark": "^0.24.0",
     "gulp": "^3.9.0",
     "mustache": "^2.2.1",
     "myth": "^1.5.0"
